--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -10,43 +10,70 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav">
                 <li
-                {% if '/' == request.path %}
-                        class="nav-item active mr-3"
-                {% else %}
-                        class="nav-item mr-3"
+                        {% if '/' == request.path %}
+                            class="nav-item active mr-3"
+                        {% else %}
+                            class="nav-item mr-3"
                         {% endif %}
                 >
                     <a class="nav-link" href={% url "index" %}>Home</a>
                 </li>
                 <li
                         {% if 'about' in request.path %}
-                        class="nav-item active mr-3"
-                {% else %}
-                        class="nav-item mr-3"
+                            class="nav-item active mr-3"
+                        {% else %}
+                            class="nav-item mr-3"
                         {% endif %}>
                     <a class="nav-link" href={% url "about" %}>About</a>
                 </li>
                 <li
-                 {% if 'listings' in request.path %}
-                        class="nav-item active mr-3"
-                {% else %}
-                        class="nav-item mr-3"
+                        {% if 'listings' in request.path %}
+                            class="nav-item active mr-3"
+                        {% else %}
+                            class="nav-item mr-3"
                         {% endif %}>
                     <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
                 </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item mr-3">
-                    <a class="nav-link" href="register.html">
-                        <i class="fas fa-user-plus"></i> Register</a>
-                </li>
-                <li class="nav-item mr-3">
-                    <a class="nav-link" href="login.html">
-                        <i class="fas fa-sign-in-alt"></i>
+                {% if user.is_authenticated %}
+                    <li {% if 'logout' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}>
+                        <a class="nav-link" href={% url 'logout' %}>
+                            <i class="fas fa-user-plus"></i> Logout</a>
+                    </li>
+                    <li {% if 'dashboard' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}>
+                        <a class="nav-link" href={% url 'dashboard' %}>
+                            <i class="fas fa-user-plus"></i> {{ request.user.first_name }}dashboard</a>
+                    </li>
+                {% else %}
+                    <li {% if 'register' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}>>
+                        <a class="nav-link" href={% url 'register' %}>
+                            <i class="fas fa-user-plus"></i> Register</a>
+                    </li>
+                    <li {% if 'login' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}>>
+                        <a class="nav-link" href={% url 'login' %}>
+                            <i class="fas fa-sign-in-alt"></i>
 
-                        Login</a>
-                </li>
+                            Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
