contact inqueries done and now while making contact , email send to that listing creator

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} | {{ request.user.username }} dashboard {% endblock %}
 {% block content %}
     <section id="showcase-inner" class="py-5 text-white">
         <div class="container">
@@ -31,40 +32,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Welcome {{ request.use.username }}</h2>
-                    <p>Here are the property listings that you have inquired about</p>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Property</th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>22</td>
-                            <td>45 Drivewood Circle</td>
-                            <td>
-                                <a class="btn btn-light" href="#">View Listing</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>43</td>
-                            <td>22 Westbrook rd</td>
-                            <td>
-                                <a class="btn btn-light" href="#">View Listing</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>31</td>
-                            <td>12 Samson Ave</td>
-                            <td>
-                                <a class="btn btn-light" href="#">View Listing</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <h2>Welcome {{ request.user.username }}</h2>
+                    {% if user_contacts %}
+                        <p>Here are the property listings that you have inquired about</p>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Property</th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for contact in user_contacts %}
+                            <tr>
+                                <td>{{ contact.id }}</td>
+                                <td>{{ contact.listing}}</td>
+                                <td>
+                                    <a class="btn btn-light" href="{% url 'listing' contact.listing.id %}">View Listing</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <p>You Have not made any inqueries</p>
+                    {% endif %}
+
                 </div>
             </div>
         </div>
