--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% block title %} | Register {% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 
