--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% block title %}| Login{% endblock %}
 {% block content %}
     <section id="login" class="bg-light py-5">
         <div class="container">
