--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% block title %} | welcome {% endblock %}
 {% block content %}
     <!-- Showcase -->
     <section id="showcase">
