password reset successfully added to project

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -28,6 +28,11 @@
                                 </div>
 
                                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
+                                <strong>
+                                    <a href="{% url 'password_reset' %}">
+                                        Forgot Your Password?
+                                    </a>
+                                </strong>
                             </form>
                         </div>
                     </div>
