--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <!-- Custom -->
     <link rel="stylesheet" href={% static "css/style.css" %}>
     <link rel="stylesheet" href={% static "css/lightbox.min.css" %}>
+    <script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}">
+    </script>
 
     <title>BT Real Estate {% block title %}{% endblock %}</title>
 </head>
